<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="Login"
            android:textStyle="bold"
            android:textSize="23sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="powered by "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/firebase_lockup_400"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|bottom">
        <TextView
            android:id="@+id/textWelcomeBack"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/defaultTextColor"
            android:text="Welcome back!"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="3"
        android:paddingHorizontal="20dp"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Password">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Password?"
                android:textColor="@color/defaultTextColor"/>
            <TextView
                android:id="@+id/textForgotPassword"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/btn_background"
                android:text="Click Here" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_sign_in"
            android:text="Sign in"
            android:layout_width="200dp"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp" />
        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"
                android:textColor="@color/defaultTextColor"/>
            <TextView
                android:id="@+id/txtSignUp"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/btn_background"
                android:text="Sign Up" />

        </LinearLayout>
        <ProgressBar
            android:layout_marginTop="16dp"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:id="@+id/progressBar"
            android:indeterminate="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            style="?android:attr/progressBarStyle"/>
    </LinearLayout>

</LinearLayout>