...
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_reg_num"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Registration No.">
            <com.google.android.material.textfield.TextInputEditText

...
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_verify"
            android:text="Verify"
            android:layout_width="200dp"
            android:enabled="false"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp" />
...
